src/ui/radarr_ui/library/snapshots/managarr__ui__radarr_ui__library__movie_details_ui__movie_details_ui_tests__tests__snapshot_tests__movie_details_render_FileInfo_AutomaticallySearchMoviePrompt.snap
---
source: src/ui/radarr_ui/library/movie_details_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                    ╭  Movie Info  ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                     
                    │ Details │ History │ File │ Cast │ Crew │ Manual Search                                                                   │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │File Details                                                                                                              │                     
                    │Some file info                                                                                                            │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────│                     
                    │Audio Details                                                                                                             │                     
                    │Some audio info               ╭────────────────  Automatic Movie Search  ─────────────────╮                               │                     
                    │                              │Do you want to trigger an automatic search of your indexers│                               │                     
                    │                              │                   for the movie: Test?                    │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │──────────────────────────────│                                                           │───────────────────────────────│                     
                    │Video Details                 │                                                           │                               │                     
                    │Some video info               │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │                                                           │                               │                     
                    │                              │╭────────────────────────────╮╭───────────────────────────╮│                               │                     
                    │                              ││             Yes            ││            No             ││                               │                     
                    │                              │╰────────────────────────────╯╰───────────────────────────╯│                               │                     
                    │                              ╰───────────────────────────────────────────────────────────╯                               │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    │                                                                                                                          │                     
                    ╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
